tests/ui/borrow-as-mut.stderr
error[E0596]: cannot borrow `a` as mutable, as it is not declared as mutable
 --> $DIR/borrow-as-mut.rs:7:5
  |
6 | async fn borrow_mut(a: Vec<u8>) {
  |                     - help: consider changing this to be mutable: `mut a`
7 |     a.clear(); //~ ERROR E0596
  |     ^ cannot borrow as mutable
